src/snapshots/rlox__test_runtime__local_declaration_without_identifier.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        {\n            var 1;\n        }\n        \")"
---
stdout:


stderr:
Error: Parse error
   ╭─[<unknown>:3:2]
   │
 3 │             var 1;
   │                 ┬  
   │                 ╰── Expected identifier
───╯


